--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
                     <hr class="tagline-divider">
                     <h2>
                         <small>
-                            <strong>A website documenting the change in the lower Michigan accent in the 21st century.</strong>
+                            <strong>A website documenting the change in the lower Michigan accent over the last 100 years.</strong>
                         </small>
                     </h2>
                 </div>
