--- a/index.html
+++ b/index.html
@@ -134,8 +134,7 @@
             <div class="box">
                 <div class="col-lg-12">
                     <hr>
-                    <h2 class="intro-text text-center">The Northern Cities Shift 
-                        <strong>Dialect</strong>
+                    <h2 class="intro-text text-center"> <strong>The Northern Cities Shift </strong> Dialect
                     </h2>
                     <hr>
                     <p>The Northern Cities Shift, henceforth NCS, is a dialect of English spoken in what is known as the Inland North dialect area.  A collection of large cities in the Great Lakes are of North America.  Some of the larger cities in this region include Green Bay, Wisconsin, Chicago, Illinois, Detroit, Michigan, Cleveland, Ohio, Scranton, Pennsylvania and Syracuse, New York.  Linguists call the NCS a regional dialect because although the speakers of the dialect are of various social backgrounds (ethnicities, social classes, ages, etc.), they are all similar in that they were born and raised in the same general geographical space, often referred to as the Rust Belt.  </p>
