--- a/about.html
+++ b/about.html
@@ -99,26 +99,38 @@
                 <div class="col-lg-12">
                     <hr>
                     <h2 class="intro-text text-center">Our
-                        <strong>Team</strong>
+                        <strong>Research Team</strong>
                     </h2>
                     <hr>
                 </div>
                 <div class="col-sm-4 text-center">
                     <img class="img-responsive" src="http://placehold.it/750x450" alt="">
-                    <h3>John Smith
-                        <small>Job Title</small>
+                    <h3>Monica Nesbitt
+                        <small>How did the Californian accent spread to Lansing and other cities across the US?</small>
                     </h3>
                 </div>
                 <div class="col-sm-4 text-center">
                     <img class="img-responsive" src="http://placehold.it/750x450" alt="">
-                    <h3>John Smith
-                        <small>Job Title</small>
+                    <h3>Alexander Mason
+                        <small>[Research question(s) here]</small>
                     </h3>
                 </div>
                 <div class="col-sm-4 text-center">
                     <img class="img-responsive" src="http://placehold.it/750x450" alt="">
-                    <h3>John Smith
-                        <small>Job Title</small>
+                    <h3>Matthew Savage
+                        <small>Attitudes toward the NCS and the Elsewhere Shift</small>
+                    </h3>
+                </div>
+                <div class="col-sm-4 text-center">
+                    <img class="img-responsive" src="http://placehold.it/750x450" alt="">
+                    <h3>Suzanne Wagner
+                        <small>Research Advisor</small>
+                    </h3>
+                </div>
+                 <div class="col-sm-4 text-center">
+                    <img class="img-responsive" src="http://placehold.it/750x450" alt="">
+                    <h3>Mingzhe Zheng
+                        <small>Minority Participation to these sound changes</small>
                     </h3>
                 </div>
                 <div class="clearfix"></div>
