--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                         <a href="about.html">Lansing</a>
                     </li>
                     <li>
-                        <a href="contact.html">Contact</a>
+                        <a href="contacts.html">Contacts</a>
                     </li>
                 </ul>
             </div>
