--- a/contacts.html
+++ b/contacts.html
@@ -58,7 +58,7 @@
                         <a href="index.html">Home</a>
                     </li>
                     <li>
-                        <a href="about.html">Lansing</a>
+                        <a href="lansing.html">Lansing</a>
                     </li>
                     <li>
                         <a href="contacts.html">Contacts</a>
