--- a/lansing.html
+++ b/lansing.html
@@ -6,12 +6,12 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="">
-    <meta name="author" content="">
+    <meta name="Language change in Lansing Michigan" content="">
+    <meta name="Monica Nesbitt" content="">
 
-    <title>Business Casual - Start Bootstrap Theme</title>
+    <title>Listen to Lansing</title>
 
-    <!-- Bootstrap Core CSS -->
+    <!-- Bootstrap Core CSS --> 
     <link href="css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Custom CSS -->
@@ -32,8 +32,8 @@
 
 <body>
 
-    <div class="brand">Business Casual</div>
-    <div class="address-bar">3481 Melrose Place | Beverly Hills, CA 90210 | 123.456.7890</div>
+    <div class="brand">Listen to Lansing</div>
+    <div class="address-bar">Documenting Language Change in lower Michigan</div>
 
     <!-- Navigation -->
     <nav class="navbar navbar-default" role="navigation">
@@ -46,23 +46,20 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <!-- navbar-brand is hidden on larger screens, but visible when the menu is collapsed -->
-                <a class="navbar-brand" href="index.html">Business Casual</a>
+                 <!-- navbar-brand is hidden on larger screens, but visible when the menu is collapsed -->
+                <a class="navbar-brand" href="index.html">Listen to Lansing</a>
             </div>
-            <!-- Collect the nav links, forms, and other content for toggling -->
+           <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav">
                     <li>
                         <a href="index.html">Home</a>
                     </li>
                     <li>
-                        <a href="about.html">About</a>
+                        <a href="about.html">Lansing</a>
                     </li>
                     <li>
-                        <a href="blog.html">Blog</a>
-                    </li>
-                    <li>
-                        <a href="contact.html">Contact</a>
+                        <a href="contacts.html">Contacts</a>
                     </li>
                 </ul>
             </div>
