--- a/lansing.html
+++ b/lansing.html
@@ -103,15 +103,15 @@
                         </a>
                     </div>
                     <h2 class="brand-before">
-                        <small>Welcome to</small>
+                        <small>Language Change in</small>
                     </h2>
-                    <h1 class="brand-name">Business Casual</h1>
-                    <hr class="tagline-divider">
-                    <h2>
+                    <h1 class="brand-name">Lansing, Michigan</h1>
+                      <hr class="tagline-divider">
+                <!--    <h2>
                         <small>By
                             <strong>Start Bootstrap</strong>
                         </small>
-                    </h2>
+                    </h2>-->
                 </div>
             </div>
         </div>
@@ -120,15 +120,15 @@
             <div class="box">
                 <div class="col-lg-12">
                     <hr>
-                    <h2 class="intro-text text-center">Build a website
-                        <strong>worth visiting</strong>
+                    <h2 class="intro-text text-center">Research at
+                        <strong>Michigan State</strong>
                     </h2>
                     <hr>
                     <img class="img-responsive img-border img-left" src="img/intro-pic.jpg" alt="">
                     <hr class="visible-xs">
-                    <p>The boxes used in this template are nested inbetween a normal Bootstrap row and the start of your column layout. The boxes will be full-width boxes, so if you want to make them smaller then you will need to customize.</p>
-                    <p>A huge thanks to <a href="http://join.deathtothestockphoto.com/" target="_blank">Death to the Stock Photo</a> for allowing us to use the beautiful photos that make this template really come to life. When using this template, make sure your photos are decent. Also make sure that the file size on your photos is kept to a minumum to keep load times to a minimum.</p>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc placerat diam quis nisl vestibulum dignissim. In hac habitasse platea dictumst. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas.</p>
+                    <p>Sociolinguists from the linguistics and langauges department at Michigan State have been documenting the dialect spoken by people Lansingites over the past few years.</p>
+                    <p>Our data comes from two sources. Interviews conducted by historians with auto workers from Autotown in the late 1990's and interviews our researchers conducted with college students in 2014 and 2015.  </p>
+                    <p>Acoustic analysis of these recorded interviews show that the NCS dialect is declining in Lansing.</p>
                 </div>
             </div>
         </div>
@@ -137,12 +137,12 @@
             <div class="box">
                 <div class="col-lg-12">
                     <hr>
-                    <h2 class="intro-text text-center">Beautiful boxes
-                        <strong>to showcase your content</strong>
+                    <h2 class="intro-text text-center">Graphical Representations
+                        <strong>of our results</strong>
                     </h2>
                     <hr>
-                    <p>Use as many boxes as you like, and put anything you want in them! They are great for just about anything, the sky's the limit!</p>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc placerat diam quis nisl vestibulum dignissim. In hac habitasse platea dictumst. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas.</p>
+                    <p>The graph to the left illustrates how the NCS shift features identified on our landing page have been declining over time.</p>
+                    
                 </div>
             </div>
         </div>
@@ -154,7 +154,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <p>Copyright &copy; Your Website 2014</p>
+                    <p>Copyright &copy; Listen to Lansing 2017</p>
                 </div>
             </div>
         </div>
