--- a/contacts.html
+++ b/contacts.html
@@ -76,8 +76,8 @@
             <div class="box">
                 <div class="col-lg-12">
                     <hr>
-                    <h2 class="intro-text text-center">About
-                        <strong>business casual</strong>
+                    <h2 class="intro-text text-center">
+                        <strong>Resources &amp; Future Directions</strong>
                     </h2>
                     <hr>
                 </div>
@@ -85,9 +85,8 @@
                     <img class="img-responsive img-border-left" src="img/slide-2.jpg" alt="">
                 </div>
                 <div class="col-md-6">
-                    <p>This is a great place to introduce your company or project and describe what you do.</p>
-                    <p>Lid est laborum dolo rumes fugats untras. Etharums ser quidem rerum facilis dolores nemis omnis fugats vitaes nemo minima rerums unsers sadips amets.</p>
-                    <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo.</p>
+                    <p>Until recently, North America has been described by sociolinguists as heterogeneous – speakers in different regions of the country are sounding more and more different from each other over time. recent studies, though, suggest that this is not the case and that speakers across the US are sound more and more like one another. We call this dialect leveling. </p>
+                    <p>This brings up various questions about how language evolves. Are all of the regions in the US losing thier dialect? Why are the dialects leveling? What about the individual speakers? Are there speakers that are more likely to keep the old dialect? What is their social make up (ethnicity, age, socioeconomic status)? What about the speakers who are more likely to want to speak the new dialect? How do the speakers in these dialect regions evaluate their speech and the speech of generations before them? </p>
                 </div>
                 <div class="clearfix"></div>
             </div>
@@ -101,6 +100,9 @@
                         <strong>Research Team</strong>
                     </h2>
                     <hr>
+                </div>
+                <div class="col-md-6">
+                    <p>My colleagues in the [Sociolinguistics Lab] at [Michigan State University] are actively working on projects that can shed light on many of these unanswered questions. Click on the links below to learn more about our individual projects related to langauge change in Lansing.  </p>
                 </div>
                 <div class="col-sm-4 text-center">
                     <img class="img-responsive" src="http://placehold.it/750x450" alt="">
