--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="Language change in Lansing Michigan" content="">
     <meta name="Monica Nesbitt" content="">
 
-    <title>Listen to Lansing</title>
+    <title>Listen to Lansing CHANGED</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
