--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                         <!-- Wrapper for slides -->
                         <div class="carousel-inner">
                             <div class="item active">
-                                <img class="img-responsive img-full" src="img/msu_sign_winter.jpg" alt="">
+                                <img class="img-responsive img-full" src="img/msu_logos.jpg" alt="">
                             </div>
                             <div class="item">
                                 <img class="img-responsive img-full" src="img/lansingphoto2.png" alt="">
