--- a/index.html
+++ b/index.html
@@ -84,13 +84,13 @@
                         <!-- Wrapper for slides -->
                         <div class="carousel-inner">
                             <div class="item active">
-                                <img class="img-responsive img-full" src="img/msu_logos.jpg" alt="">
+                                <img class="img-responsive img-full" src="img/lansing_StoreFronts.jpg" alt="">
                             </div>
                             <div class="item">
                                 <img class="img-responsive img-full" src="img/lansingphoto2.png" alt="">
                             </div>
                             <div class="item">
-                                <img class="img-responsive img-full" src="img/slide-3.jpg" alt="">
+                                <img class="img-responsive img-full" src="img/lansing_StoreFronts.jpg" alt="">
                             </div>
                         </div>
 
