--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
     <div class="container">
 
         <div class="row">
-            <div class="box">
+            <div class="box1">
                 <div class="col-lg-12 text-center">
                     <div id="carousel-example-generic" class="carousel slide">
                         <!-- Indicators -->
