--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
     <div class="container">
 
         <div class="row">
-            <div class="box1">
+            <div class="box">
                 <div class="col-lg-12 text-center">
                     <div id="carousel-example-generic" class="carousel slide">
                         <!-- Indicators -->
@@ -101,7 +101,7 @@
                         <a class="right carousel-control" href="#carousel-example-generic" data-slide="next">
                             <span class="icon-next"></span>
                         </a>
-                    
+                    </div>
                     <h2 class="brand-before">
                         <small>Welcome to</small>
                     </h2>
@@ -112,7 +112,7 @@
                             <strong>A website documenting the change in the lower Michigan accent over the last 100 years.</strong>
                         </small>
                     </h2>
-                    </div>
+                    
                 </div>
             </div>
         </div>
