--- a/lansing.html
+++ b/lansing.html
@@ -142,7 +142,11 @@
                     </h2>
                     <hr>
                     <p>The graph to the left illustrates how the NCS shift features identified on our landing page have been declining over time.</p>
-                    
+                    <p> <audio controls>
+                        <source src="THAT_THOUGHT_JOB_MichelleBaulch.wav" type="audio/wav">
+                        Your browser does not support the audio element.
+                        </audio> 
+                    </p>
                 </div>
             </div>
         </div>
