--- a/lansing.html
+++ b/lansing.html
@@ -142,12 +142,28 @@
                     </h2>
                     <hr>
                     <p>The graph to the left illustrates how the NCS shift features identified on our landing page have been declining over time.</p>
-                    <p> 
-                         <a href="THAT_THOUGHT_JOB_MichelleBaulch.wav">Old Lady</a>
-                     <!---   <audio controls>
-                        <source src="THAT_THOUGHT_JOB_MichelleBaulch.wav" type="audio/wav">
+                    <p> Listen to this file to hear someone from the generation born 1900-1920
+                          <audio controls>
+                        <source src="audio/FATHER_MildredAlspaugh_806secs.wav" type="audio/wav">
+                        Your browser does not support the audio element.
+                        </audio> 
+                        Listen to these files to hear someone from the generation born 1930-1950
+                        <audio controls>
+                        <source src="audio/CONSTANT_COPIES_GayleGooslin_1003secs.wav" type="audio/wav">
+                        Your browser does not support the audio element.
+                        </audio> 
+                        <audio controls>
+                        <source src="audio/LANSING_GayleGooslin_1986secs.wav" type="audio/wav">
+                        Your browser does not support the audio element.
+                        </audio> 
+                     <!--   Listen to these files to hear someone from the generation born 1950-1970
+                        <audio controls>
+                        <source src="audio/LANSING_GayleGooslin_1986secs.wav" type="audio/wav">
                         Your browser does not support the audio element.
                         </audio> -->
+                        
+
+
                     </p>
                 </div>
             </div>
