previous commit was trying to add a map
 <div id="map" style="width:400px;height:400px;"></div>

<script>
function myMap() {
    var mapOptions = {
        center: new google.maps.LatLng(51.5, -0.12),
        zoom: 10,
        mapTypeId: google.maps.MapTypeId.HYBRID
    }
var map = new google.maps.Map(document.getElementById("map"), mapOptions);
}
</script>

--- a/lansing.html
+++ b/lansing.html
@@ -126,7 +126,7 @@
                     <hr>
                     <img class="img-responsive img-border img-left" src="img/intro-pic.jpg" alt="">
                     <hr class="visible-xs">
-                    <p>Sociolinguists from the linguistics and langauges department at Michigan State have been documenting the dialect spoken by people Lansingites over the past few years.</p>
+                    <p>Sociolinguists from the Linguistics and Langauges department at Michigan State have been documenting the dialect spoken by people Lansingites over the past few years.</p>
                     <p>Our data comes from two sources. Interviews conducted by historians with auto workers from Autotown in the late 1990's and interviews our researchers conducted with college students in 2014 and 2015.  </p>
                     <p>Acoustic analysis of these recorded interviews show that the NCS dialect is declining in Lansing.</p>
                    <div id="map" style="width:400px;height:400px;"></div>
