--- a/lansing.html
+++ b/lansing.html
@@ -166,23 +166,26 @@ var map = new google.maps.Map(document.getElementById("map"), mapOptions);
                     <!----Here is the code for the table.  The styling for it is in the STYLE tag housed in the head (above)-->
                     <table style="width:50%">
   <tr>
-    <th>Firstname</th>
-    <th>Lastname</th> 
-    <th>Age</th>
+    <th>Generation</th>
+    <th>Speaker Info</th> 
+    <th>Sound Files</th>
   </tr>
   <tr>
-    <td>Jill</td>
-    <td>Smith</td>
-    <td>50</td>
+    <td>1900-1920</td>
+    <td>female, secretary</td>
+    <td><audio controls>
+                        <source src="audio/FATHER_MildredAlspaugh_806secs.wav" type="audio/wav">
+                        Your browser does not support the audio element.
+                        </audio> </td>
   </tr>
   <tr>
-    <td>Eve</td>
-    <td>Jackson</td>
+    <td>1920-1950/td>
+    <td>female, laborer</td>
     <td>94</td>
   </tr>
   <tr>
-    <td>John</td>
-    <td>Doe</td>
+    <td>1950-1970</td>
+    <td>female, occupational therapist</td>
     <td>80</td>
   </tr>
 </table>
