--- a/lansing.html
+++ b/lansing.html
@@ -179,9 +179,16 @@ var map = new google.maps.Map(document.getElementById("map"), mapOptions);
                         </audio> </td>
   </tr>
   <tr>
-    <td>1920-1950/td>
+    <td>1920-1950</td>
     <td>female, laborer</td>
-    <td>94</td>
+    <td><audio controls>
+                        <source src="audio/CONSTANT_COPIES_GayleGooslin_1003secs.wav" type="audio/wav">
+                        Your browser does not support the audio element.
+                        </audio> 
+                        <audio controls>
+                        <source src="audio/LANSING_GayleGooslin_1986secs.wav" type="audio/wav">
+                        Your browser does not support the audio element.
+                        </audio> </td>
   </tr>
   <tr>
     <td>1950-1970</td>
