--- a/lansing.html
+++ b/lansing.html
@@ -155,8 +155,8 @@ var map = new google.maps.Map(document.getElementById("map"), mapOptions);
             <div class="box">
                 <div class="col-lg-12">
                     <hr>
-                    <h2 class="intro-text text-center">Graphical Representations
-                        <strong>of our results</strong>
+                    <h2 class="intro-text text-center">Listen 
+                        <strong>to Lansing</strong>
                     </h2>
                     <hr>
                     <p>Click on the sound files below to get a feel for how the accent in Lansing has changed over time.</p>
