--- a/lansing.html
+++ b/lansing.html
@@ -166,7 +166,7 @@ var map = new google.maps.Map(document.getElementById("map"), mapOptions);
                     <!--Here is the code for the table.  The styling for it is in the STYLE tag housed in the head (above)-->
                     <table style="width:75%">
   <tr>
-    <th>Year Of Birth</th>
+    <th>Generation</th>
     <th>Speaker Info</th> 
     <th>Sound Files</th>
   </tr>
