--- a/contacts.html
+++ b/contacts.html
@@ -103,18 +103,19 @@
                 </div>
                 <div class="col-md-6">
                     <p>My colleagues in the <a href= http://msusociolinguistics.weebly.com/projects.html>Sociolinguistics Lab</a> at 
-                        <a href= https://msu.edu>Michigan State University</a> are actively working on projects that can shed light on many of these unanswered questions. Click on the links below to learn more about our individual projects related to langauge change in Lansing.  </p>
+                        <a href= https://msu.edu>Michigan State University</a> are actively working on projects that can shed light on many of these unanswered questions. You'll find brief descriptions of the individual projects currently being developed by our team.  Click on a name if you'd like to contact any of these project members.  </p>
+                </div>
+                 <div class="col-sm-4 text-center">
+                    <h3>  <a href="http://alexanderbmason.weebly.com/"> Alexander Mason </a>            
+                        <small>How can the findings in Lansing relate to theories of chain shifting?</small>
+                    </h3>
                 </div>
                 <div class="col-sm-4 text-center">
                     <h3>   Monica Nesbitt
                         <small>How did this new accent spread to Lansing and other cities across the US?</small>
                     </h3>
                 </div>
-                <div class="col-sm-4 text-center">
-                    <h3>  <a href="http://alexanderbmason.weebly.com/"> Alexander Mason </a>            
-                        <small>How can the findings in Lansing relate to theories of chain shifting?</small>
-                    </h3>
-                </div>
+               
                 <div class="col-sm-4 text-center">
                     <h3>Matthew Savage
                         <small>Attitudes toward local dialects.</small>
