--- a/contacts.html
+++ b/contacts.html
@@ -112,7 +112,7 @@
                 </div>
                 <div class="col-sm-4 text-center">
                     <h3>   Monica Nesbitt
-                        <small>How did this new accent spread to Lansing and other cities across the US?</small>
+                        <p><small>How did this new accent spread to Lansing and other cities across the US?</small></p>
                     </h3>
                 </div>
                
