--- a/contacts.html
+++ b/contacts.html
@@ -112,7 +112,8 @@
                 </div>
                 <div class="col-sm-4 text-center">
                     <h3>   Monica Nesbitt
-                        <p><small>How did this new accent spread to Lansing and other cities across the US?</small></p>
+                        <br />
+                        <div><small>How did this new accent spread to Lansing and other cities across the US?</small></div>
                     </h3>
                 </div>
                
