--- a/contacts.html
+++ b/contacts.html
@@ -107,7 +107,8 @@
                 </div>
                  <div class="col-sm-4 text-center">
                     <h3>  <a href="http://alexanderbmason.weebly.com/"> Alexander Mason </a>            
-                        <small>How can the findings in Lansing relate to theories of chain shifting?</small>
+                        <br />
+                        <div><small>How can the findings in Lansing relate to theories of chain shifting?</small></div>
                     </h3>
                 </div>
                 <div class="col-sm-4 text-center">
@@ -119,17 +120,20 @@
                
                 <div class="col-sm-4 text-center">
                     <h3>Matthew Savage
-                        <small>Attitudes toward local dialects.</small>
+                        <br />
+                        <div><small>Attitudes toward local dialects.</small></div>
                     </h3>
                 </div>
                 <div class="col-sm-6 text-center">
                     <h3>  <a href="https://msu.edu/~wagnersu/">Suzanne Wagner</a>  
-                        <small>Research Advisor</small>
+                        <br />
+                        <div><small>Research Advisor</small></div>
                     </h3>
                 </div>
                  <div class="col-sm-6 text-center">
                     <h3>Mingzhe Zheng
-                        <small>Minority participation in language change processes.</small>
+                        <br />
+                        <div><small>Minority participation in language change processes.</small></div>
                     </h3>
                 </div>
                 <div class="clearfix"></div>
