--- a/contacts.html
+++ b/contacts.html
@@ -114,14 +114,14 @@
                 <div class="col-sm-4 text-center">
                     <h3>   Monica Nesbitt
                         <br />
-                        <div><small>How did this new accent spread to Lansing and other cities across the US?</small></div>
+                        <div><small>How did this new accent spread to Lansing and other cities across the US? Contact Monica at nesbit17[at]msu[dot]edu</small></div>
                     </h3>
                 </div>
                
                 <div class="col-sm-4 text-center">
                     <h3>Matthew Savage
                         <br />
-                        <div><small>Attitudes toward local dialects.</small></div>
+                        <div><small>Attitudes toward local dialects. Contact MAtt at savaged5[at]msu[dot]edu </small></div>
                     </h3>
                 </div>
                 <div class="col-sm-6 text-center">
@@ -133,7 +133,7 @@
                  <div class="col-sm-6 text-center">
                     <h3>Mingzhe Zheng
                         <br />
-                        <div><small>Minority participation in language change processes.</small></div>
+                        <div><small>Minority participation in language change processes. Contact Mingzhe at zhengmi4[at]msu[dot]edu </small></div>
                     </h3>
                 </div>
                 <div class="clearfix"></div>
