--- a/lansing.html
+++ b/lansing.html
@@ -78,7 +78,7 @@ table, th, td {
         <div class="row">
             <div class="box">
                 <div class="col-lg-12 text-center">
-                    <img class="img-responsive img-full" src="img/slide-1.jpg" alt="">
+                    <img class="img-responsive img-full" src="img/map_lansing_mi.jpg" alt="">
  
                     <h2 class="brand-before">
                         <small>Language Change in</small>
