--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
       
                     <p>The Northern Cities Shift or NCS is a dialect of English spoken in what is known as the Inland North dialect area.  A collection of cities surrounding the Great Lakes area of North America.  Some of the larger cities in this region include Green Bay, Wisconsin, Chicago, Illinois, Detroit, Michigan, Cleveland, Ohio, Scranton, Pennsylvania and Syracuse, New York.  Linguists call the NCS a regional dialect because although the speakers of the dialect are of various social backgrounds (ethnicities, social classes, ages, etc.), they are all similar in that they were born and raised in the same general geographical space, often referred to as the Rust Belt.  </p>
   
-<p>  <img class="img-responsive img-border img-left" src="img/map_AmerDialects.jpg" alt="">  </p>
+<p>  <img class="img-responsive img-border img-left" src="img/map_InlandNorth.jpg" alt="">  </p>
 <br>
 <p>Speakers in this region pronounce vowel sounds a bit differently from the rest of the United States.
 
