--- a/contacts.html
+++ b/contacts.html
@@ -82,7 +82,7 @@
                     <hr>
                 </div>
                 <div class="col-md-6">
-                    <img class="img-responsive img-border-left" src="img/slide-2.jpg" alt="">
+                    <img class="img-responsive img-border-left" src="img/map_AmerDialects.jpg" alt="">
                 </div>
                 <div class="col-md-6">
                     <p>Until recently, North America has been described by sociolinguists as heterogeneous – speakers in different regions of the country are sounding more and more different from each other over time. recent studies, though, suggest that this is not the case and that speakers across the US are sound more and more like one another. We call this dialect leveling. </p>
